# rchan

./: Cargo.toml  README.md
crates/api/: Cargo.toml
crates/api/src/: cache.rs  client.rs  error.rs  lib.rs  rate_limit.rs  response.rs
crates/cmd/src/: main.rs
crates/stream/: Cargo.toml
crates/stream/src/: client.rs  error.rs  lib.rs  worker.rs
crates/types/: Cargo.toml
crates/types/src/: board.rs  index.rs  lib.rs  post.rs  utils.rs
src/: main.rs
src/api/: cache.rs  client.rs  endpoint.rs  error.rs  mod.rs  rate_limit.rs  response.rs
src/stream/: client.rs  stream.rs  worker.rs
src/types/: board.rs  catalog.rs  index.rs  post.rs
