[workspace]
members = [
    "crates/api",
    "crates/types",
    "crates/stream",
]

[workspace.package]
name = "rchan"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Rubenduburck/rchan"

[workspace.dependencies]
rchan-api = { path = "crates/api" }
rchan-types = { path = "crates/types" }
rchan-stream = { path = "crates/stream" }

chrono = "0.4.35"
futures = "0.3.30"
lru = "0.12.3"
reqwest = { version = "0.12.0", features = ["json", "native-tls-vendored"] }
serde = { version = "1.0.197", features = ["derive"] }
thiserror = "1.0.58"
tokio = { version = "1.36.0", features = ["rt", "macros", "sync"] }

tracing = "0.1.40"
tracing-test = "0.2.4"

regex = "1.5.4"
html-entities = "0.1.0"
